--- a/index.html
+++ b/index.html
@@ -16,11 +16,16 @@
     <div class="wrapper">
       <header>
         <h2>Researcherservices.GitHub.io</h1>
+         <p></p>
+          <p></p>
       </header>
       
       <section>
         <h3>
-<a id="welcome-to-researcher-services" class="anchor" href="#welcome-to-researcher-services" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to Researcher Services</h3>
+<a id="welcome-to-researcher-services" class="anchor" href="#welcome-to-researcher-services" aria-hidden="true">
+  <span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to Researcher Services</h3>
+  <p></p>
+   <p></p>
       </section>
       
       <footer>
