--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
     <div class="wrapper">
       <header>
-        <h2>Researcherservices.GitHub.io</h1>
+        <h2>Researcher Services Inc.</h1>
          <p></p>
           <p></p>
       </header>
