--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <h2>Researcher Services Inc.</h1>
          <ul>
            <li>Accelerating your research</li>
-           <li>Increasing your immediate visibility<li>
+           <li>Increasing your immediate visibility</li>
             <li>Ensuring your long-term research impact</li>
           </ul>
       </header>
