--- a/index.html
+++ b/index.html
@@ -27,19 +27,11 @@
       </header>
       
       <section>
-        <h3>
-<a id="welcome-to-researcher-services" class="anchor" href="#welcome-to-researcher-services" aria-hidden="true">
-  <span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to Researcher Services</h3>
-  <p>Taxonomy of research fields</p>
-  <ul>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-  </ul>
-  <p>Lifecycle of research</p>
+        
+  <span aria-hidden="true" class="octicon octicon-link"></span></a>
+  <a href="/taxonomy.html">What is the scope of your research?(classified into 1000 fields)</a>
+  
+  <p>What is the lifecycle of your research?</p>
   <ul>
     <li>Request for proposal(RFP) stage</li>
     <li>Research stage</li>
