--- a/index.html
+++ b/index.html
@@ -30,17 +30,20 @@
         
   <span aria-hidden="true" class="octicon octicon-link"></span></a>
   <a href="/taxonomy.html">What is the scope of your research?(classified into 1000 fields)</a>
-  
+  <p></p>
+  <p></p>
   <p>What is the lifecycle of your research?</p>
   <ul>
-    <li>Request for proposal(RFP) stage</li>
-    <li>Research stage</li>
-    <li>Publication stage</li>
-    <li>Impact assessment stage</li>
+    <li><a href="/">Request for proposal(RFP) stage</a></li>
+    <li><a href="/">Research stage</a></li>
+    <li><a href="/">Publication stage</a></li>
+    <li><a href="/">Impact assessment stage</a></li>
+    <p></p>
+    <p></p>
       </section>
       
       <footer>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+        <p>Produced by Research Services Inc.</p>
       </footer>
     </div>
     <script src="javascripts/scale.fix.js"></script>
