--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <section>
         
   <span aria-hidden="true" class="octicon octicon-link"></span></a>
-  <a href="/taxonomy.html">What is the scope of your research?(classified into 1000 fields)</a>
+  <a href="/taxonomy/index.html">What is the scope of your research?(classified into 1000 fields)</a>
   <p></p>
   <p></p>
   <p>What is the lifecycle of your research?</p>
@@ -40,6 +40,12 @@
     <li><a href="/">Impact assessment stage</a></li>
     <p></p>
     <p></p>
+    Some emerging fields to inspire young investigators:
+    <ul>
+      <li><a href="/taxonomy/index1.html">Field #1</a>    </li>
+      <li><a href="/taxonomy/index2.html">Field #2</a>    </li>
+      <li><a href="/taxonomy/index3.html">Field #3</a>    </li>
+    </ul>
       </section>
       
       <footer>
